<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_user_profile">
        <EditTextPreference android:title="@string/pref_user_name" android:summary="@string/pref_user_name_summary" android:key="prefUsername" android:defaultValue="192.168.2.1"/>
        <EditTextPreference android:summary="Lirc server port" android:title="Server port" android:key="prefport" android:inputType="number" android:defaultValue="8765"/>
    </PreferenceCategory><PreferenceCategory android:title="Macro settings">
            <EditTextPreference android:summary="Set a delay between each macro command in ms" android:defaultValue="1000" android:title="Macro delay(ms)" android:key="timeout" android:inputType="number" />
        </PreferenceCategory>

</PreferenceScreen>